fix(studio): z-index 위치 수정

--- a/src/style-product/scss/pages/_studio.scss
+++ b/src/style-product/scss/pages/_studio.scss
@@ -2323,7 +2323,7 @@
 
 //studio내 overlay가 로딩스피너를 포함하고 있을때 모달보다 위에 위치하도록 처리
 .overlay--loading {
-  z-index: 10000;
+  z-index: 8300;
 }
 
 // -------------------------
